--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="description" content="Starter">
-	<meta name="author" content="Admin">
+	<meta name="description" content="New Year">
+	<meta name="New Year" content="New Year">
 	<title>New Year</title>
 
 
@@ -21,7 +21,7 @@
 
 <body>
 
-	<h1 class="title">Merry Christmas and Happy New Hear !</h1>
+	<h1 class="title">Merry Christmas and Happy New Year !</h1>
 
 
 	<div class="wrapper">
