added stars and wave animation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
 	<h1 class="title">Merry Christmas and Happy New Year !</h1>
 
-
 	<div class="wrapper">
 		<div class="santa">
 			<div class="hat">
@@ -37,7 +36,12 @@
 		</div>
 	</div>
 
+	<div class="year">2021</div>
 
+<div class="star">
+	<div class="star__top"></div>
+	<div class="star__bottom"></div>
+</div>
 
 
 
